[tool.poetry]
name = "kamiggle"
version = "0.1.0"
description = ""
authors = ["unonao <naokiuno634@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.21.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
